Fix scroll ui on mobile (#184)
* Fix scroll ui on mobile

* Ensure package lock file is used.

* Bump auto approval

* Update backstop with auto approval

* Bump approval

* Update backstop with auto approval

--- a/src/components/ScrollableList/ScrollableList.module.css
+++ b/src/components/ScrollableList/ScrollableList.module.css
@@ -1,7 +1,7 @@
 .container {
   box-sizing: border-box;
   height: 300px;
-  width: 400px;
+  width: 100%;
   overflow-y: scroll;
   border: #ddd solid 1px;
 }
